--- a/evil-witch.html
+++ b/evil-witch.html
@@ -374,12 +374,12 @@
 	<!--End Header -->
 	
 	<!-- Start Breadcrumb Area -->
-	<section class="case-study">
+	<section class="case-study evil-witch-banner">
 		<div class="container">
 			<div class="row justify-content-md-center">
 				<div class="col-lg-10 v-center" style="margin-top:10%">
 					<div id="axis" class="one">
-						<img src="images/case-study/rocco/character.png" alt="" height="80%" width="80%" class="object van move-right">
+						<img src="images/case-study/rocco/character.png" alt="Evil Witch Character" class="img-fluid object van move-right evil-witch-character-img">
 					</div>
 				</div>
 			</div>
@@ -387,148 +387,178 @@
 	</section>
 	<!-- End Breadcrumb Area -->
 	
-	<!-- Start Chararter Section -->
-	<section class="characterDesign pt-5">
+	<!-- Start About Section -->
+	<section class="evil-witch-about py-3 py-md-3 py-lg-4">
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<div class="col-lg-5 col-12 col-md-12">
-					<h3 class="characterHeading">Concept of Character Design</h3>
-					<p class="characterDescription">After much effort, our team found a unique character idea covering the horror feel. It was crucial to converting ideas into reality, especially when it comes to character design from scratch. But our expert designers' record proves that they can make the impossible possible. Because of the team's great effort and professional approach, a great memorable character named Evil witch, which covers a half-human body and half spider, became a reality.</p>
+				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
+					<h3 class="evil-witch-about-heading">Concept of Character Design</h3>
+					<p class="evil-witch-about-text">After much effort, our team found a unique character idea covering the horror feel. It was crucial to converting ideas into reality, especially when it comes to character design from scratch. But our expert designers' record proves that they can make the impossible possible. Because of the team's great effort and professional approach, a great memorable character named Evil witch, which covers a half-human body and half spider, became a reality.</p>
 				</div>
-				<div class="col-lg-1"></div>
-				<div class="col-lg-3 col-6 col-md-6">
-					<img src="images/case-study/rocco/first-character.png" alt="" height="100%" width="100%">
+				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
+					<img src="images/case-study/rocco/first-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img1">
 				</div>
-				<div class="col-lg-3 col-6 col-md-6">
-					<img src="images/case-study/rocco/second-character.png" alt="" height="100%" width="100%">
+				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
+					<img src="images/case-study/rocco/second-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img2">
 				</div>
 			</div>
 		</div>
-		
 	</section>
+	<!-- End About Section -->
 
-	<section class="characterDesign2 mt-3">
+	<!-- Start Who Section -->
+	<section class="evil-witch-who py-3 py-md-3 py-lg-4">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 ">
-					<img src="images/case-study/rocco/third-character.png" alt="" height="100%" width="100%">
+					<img src="images/case-study/rocco/third-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-who-img">
 				</div>
 				<div class="col-lg-6 my-auto">
-					<h3 class="characterHeading2">Who is the Evil Witch?</h3>
-					<p class="characterDescription2">During the brainstorming for the character, it was decided that this character mode, feel, and features must communicate through visuals. The evil witch has had to be powerful and visually horror, having evil power and bad-tempered at the same time. We were confident that this character would be the best horror character that attracted viewers.</p>
+					<h3 class="evil-witch-who-heading">Who is the Evil Witch?</h3>
+					<p class="evil-witch-who-text">During the brainstorming for the character, it was decided that this character mode, feel, and features must communicate through visuals. The evil witch has had to be powerful and visually horror, having evil power and bad-tempered at the same time. We were confident that this character would be the best horror character that attracted viewers.</p>
 				</div>
 			</div>
 		</div>
 	</section>
+	<!-- End Who Section -->
 
-	<section class="sketing mt-3">
+	<!-- Start Sketching Section -->
+	<section class="evil-witch-sketch py-3 py-md-3 py-lg-4">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 v-center">
-					<img src="images/case-study/rocco/fourth-character.png" alt="" height="100%" width="100%">
+					<img src="images/case-study/rocco/fourth-character.png" alt="Evil Witch Sketch" class="img-fluid evil-witch-sketch-img">
 				</div>
 				<div class="col-lg-6 my-auto">
-					<h3 class="characterHeading2 text-center" style="color: #fff;"> Sketches Of Evil Witch</h3>
-					<p class="characterDescription3 text-center" style="color: #fff;">After brainstorming and the concept of the character, real work had to start that was Sketch of the evil witch.We have to work on the main Sketch of the evil witch due to our designer's hard work and great effort. This work was done before the time.</p>
+					<h3 class="evil-witch-sketch-heading text-white">Sketches Of Evil Witch</h3>
+					<p class="evil-witch-sketch-text text-white">After brainstorming and the concept of the character, real work had to start that was Sketch of the evil witch.We have to work on the main Sketch of the evil witch due to our designer's hard work and great effort. This work was done before the time.</p>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Chararter Section -->
+	<!-- End Sketching Section -->
 
-	<!-- Start Chararter Section -->
-	<section class="characterImages py-5">
+	<!-- Start Chararters Section -->
+	<section class="evil-witch-characters py-3 py-md-3 py-lg-4">
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-1.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-2.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-3.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-4.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-5.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-1.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img1">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-2.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img2">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-3.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img3">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-4.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img4">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-5.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img5">
+				</div>
 			</div>
 			<div class="row justify-content-md-center">
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-6.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-7.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-8.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-9.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-2 col-6 col-md-4"> <img src="images/case-study/rocco/character-10.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-6.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img6">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-7.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img7">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-8.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img8">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-9.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img9">
+				</div>
+				<div class="col-lg-2 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-10.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img10">
+				</div>
 			</div>
 			<div class="row justify-content-md-center">
-				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-11.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-12.png" alt="" height="100%" width="100%"> </div>
-				<div class="col-lg-3 col-6 col-md-4"> <img src="images/case-study/rocco/character-13.png" alt="" height="100%" width="100%"> </div>
+				<div class="col-lg-3 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-11.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img11">
+				</div>
+				<div class="col-lg-3 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-12.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img12">
+				</div>
+				<div class="col-lg-3 col-6 col-md-4">
+					<img src="images/case-study/rocco/character-13.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img13">
+				</div>
 			</div>
 		</div>
 	</section>
-	<!-- End Chararter Section -->
 
-	<!-- character description section start -->
-	<section class="container py-5">
+	<section class="container">
 		<div class="row justify-content-md-center">
 			<div class="col-lg-8 text-center ">
 				<p class="characterDescription4">After this part, we had to work on this character sketch covering its movement and acting and different poses. These poses include how the witch will look when it looks on the left side and right side, and sketches also cover different movements of the legs. </p>
 			</div>
 		</div>
 	</section>
-	<!-- character description section end -->
-	<!-- character large image section start -->
-	<section class="container">
+
+	<section class="container py-5">
 		<div class="row justify-content-md-center">
-			<div class="col-lg-7"> <img src="images/case-study/rocco/characters.png" alt="" height="100%" width="100%"> </div>
+			<div class="col-lg-7 text-center">
+				<img src="images/case-study/rocco/characters.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img14">
+			</div>
 		</div>
 	</section>
-	<section class="py-5 characterConcept">
+	<!-- End Chararters Section -->
+
+	<!-- Start Concept Section -->
+	<section class="evil-witch-concept py-3 py-md-3 py-lg-4">
 		<div class="container-fluid">
 			<div class="row justify-content-md-center">
 				<div class="col-lg-3">
-					<img src="images/case-study/rocco/concept-2.png" alt="" height="100%" width="100%">
+					<img src="images/case-study/rocco/concept-2.png" alt="Evil Witch Concept" class="img-fluid evil-witch-concept-img2">
 				</div>
 				<div class="col-lg-5 text-center my-auto">
-					<h3 class="characterHeading5 text-white">Concept of Evil Witch</h3>
-					<p class="characterDescription5 text-white">The concept of evil covers all its specifications like a character can through the web because this character is a mixture of human and spider with this character should look dangerous and bad-tempered because the character's role is villain having some extraordinary power.</p>
+					<h3 class="evil-witch-concept-heading text-white">Concept of Evil Witch</h3>
+					<p class="evil-witch-concept-text text-white">The concept of evil covers all its specifications like a character can through the web because this character is a mixture of human and spider with this character should look dangerous and bad-tempered because the character's role is villain having some extraordinary power.</p>
 				</div>
 				<div class="col-lg-3">
-					<img src="images/case-study/rocco/concept-1.png" alt="" height="100%" width="100%">
+					<img src="images/case-study/rocco/concept-1.png" alt="Evil Witch Concept" class="img-fluid evil-witch-concept-img1">
 				</div>
 			</div>
 		</div>
 	</section>
-	<!-- character description section end -->
-	<!-- about character section start -->
-	<section class="container py-5">
+	<!-- End Concept Section -->
+
+	<!-- Start Design Section -->
+	<section class="container py-3 py-md-3 py-lg-4">
 		<div class="row justify-content-md-center">
 			<div class="col-lg-6">
-				<img src="images/case-study/rocco/about-1.png" alt="" class="img-fluid">
+				<img src="images/case-study/rocco/about-1.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img1">
 			</div>
 			<div class="col-lg-6 my-auto">
-				<h3 class="characterHeadingAbout">Ready Design</h3>
-				<p class="characterDescriptionAbout">After sketch finalization, It had been a long way, but we were done it fast. The team started work to make the character its natural form, and within a couple of days, all things that needed to be done evil were ready as per expectation, which is provided in the sketch phase and all emotions designs.</p>
+				<h3 class="evil witch-design-heading">Ready Design</h3>
+				<p class="evil witch-design-text">After sketch finalization, It had been a long way, but we were done it fast. The team started work to make the character its natural form, and within a couple of days, all things that needed to be done evil were ready as per expectation, which is provided in the sketch phase and all emotions designs.</p>
 			</div>
 		</div>
-		<div class="row justify-content-md-center">
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-2.png" alt="" class="img-fluid">
-				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is ready to attack with high tempered.</p>
+		<div class="row justify-content-md-center py-5">
+			<div class="col-lg-6">
+				<img src="images/case-study/rocco/about-2.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img2">
+				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is ready to attack with high tempered.</p>
 			</div>
-			<div class="col-lg-2"></div>
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-3.png" alt="" class="img-fluid">
-				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is doing the spiritual prayer of a demon.</p>
+			<div class="col-lg-6">
+				<img src="images/case-study/rocco/about-3.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img3">
+				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is doing the spiritual prayer of a demon.</p>
 			</div>
 		</div>
-		<div class="row justify-content-md-center" style="margin-bottom: 100px">
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-4.png" alt="" class="img-fluid">
-				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is on focus and trying to get the idea of the situation.</p>
+		<div class="row justify-content-md-center py-5">
+			<div class="col-lg-6">
+				<img src="images/case-study/rocco/about-4.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img4">
+				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is on focus and trying to get the idea of the situation.</p>
 			</div>
-			<div class="col-lg-2"></div>
-			<div class="col-lg-5" style="margin-top: 100px;">
-				<img src="images/case-study/rocco/about-5.png" alt="" height="100%" width="100%">
-				<p class="characterDescriptionAbout2">This design shows the emotion when an evil witch is ready to throw the dangerous web.</p>
+			<div class="col-lg-6">
+				<img src="images/case-study/rocco/about-5.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img5">
+				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is ready to throw the dangerous web.</p>
 			</div>
 		</div>
 	</section>
-	<!-- about character section end -->
+	<!-- Start Design Section -->
+
 	<!-- Start Footer -->
 	<footer>
 		<div class="footer-row2">
