home page updated

--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
 			<div id="ar" class="tab-pane active"><br>
 				<div class="scrollHalf">
 					<div class="scrollHalf__grupo row h-100" data-scroll>
-						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 my-auto first-cs">
+						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 my-auto ar-first-cs">
 							<img src="images/case-study/placea-app.png" class="img-fluid" alt="Place App" />
 						</div>
 						<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-5 offset-xl-1 my-auto">
@@ -656,7 +656,7 @@
 							<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 							<h3 class="techCat">Game App</h3>
 							<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -704,7 +704,7 @@
 							   <img src="images/case-study/self_logo.png" alt="" class="icon-img">
 							<h3 class="techCat">Game App</h3>
 							<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -733,7 +733,7 @@
 			<div id="game" class="tab-pane fade"><br>
 				<div class="scrollHalf">
 					<div class="scrollHalf__grupo row h-100" data-scroll>
-						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto first-cs">
+						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto game-first-cs">
 							<img src="images/case-study/toys-short-app.png" class="img-fluid" alt="Toys Sort App"/>
 						</div>
 						<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
@@ -755,7 +755,7 @@
 							<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 							<h3 class="techCat">Game App</h3>
 							<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -803,7 +803,7 @@
 							<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 							<h3 class="techCat">Game App</h3>
 							<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -832,8 +832,8 @@
 			<div id="vr" class="tab-pane fade"><br>
 				<div class="scrollHalf">
 					<div class="scrollHalf__grupo row h-100" data-scroll>
-						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto first-cs">
-							<img src="images/case-study/amj_img.png" class="img-fluid" />
+						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto vr-first-cs">
+							<img src="images/case-study/amj_img.png" class="img-fluid"/>
 						</div>
 						<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
 							<img src="images/case-study/amj-logo.jpg" alt="" class="icon-img">
@@ -855,7 +855,7 @@
 							<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 							<h3 class="techCat">Game App</h3>
 							<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -903,7 +903,7 @@
 							<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 							<h3 class="techCat">Game App</h3>
 							<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -932,11 +932,11 @@
 			<div id="mobile-apps" class="tab-pane fade"><br>
 				<div class="scrollHalf">
 					<div class="scrollHalf__grupo row h-100" data-scroll>
-						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto first-cs">
-							<img src="images/case-study/vero-app.png" class="img-fluid" />
+						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto mobile-app-first-cs">
+							<img src="images/case-study/vero-app.png" class="img-fluid" alt="Verp App" />
 						</div>
 						<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
-							<img src="images/case-study/amj-logo.jpg" alt="" class="icon-img">
+							<img src="images/case-study/vero-logo.png" alt="" class="icon-img" alt="Vero Logo">
 							<h2 class="pt-3 case-study-heading">Vero App</h2>
 							<p class="pt-3 case-study-text">VERO is a hassle-free, one stop solution for your daily needs. Track what you want to buy, order food, or take a ride. Fit it all in a day with VERO!</p>
 							<a target="_blank" href="vero.html" class="btn btn-naked text-uppercase pt-5">
@@ -947,13 +947,13 @@
 						</div>
 					</div>
 					<div class="scrollHalf__grupo row h-100" data-scroll>
-						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto second-cs">
-							<img src="images/case-study/homestore-app.png" class="imgResponsive" />
+						<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto mobile-app-second-cs">
+							<img src="images/case-study/homestore-app.png" class="img-fluid" alt="Home Store App"/>
 						</div>
 						<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
-							<img src="images/case-study/self_logo.png" alt="" class="icon-img">
+							<img src="images/case-study/homestore-logo.png" class="icon-img" alt="Home Store Logo">
 							<h2 class="pt-3 case-study-heading">Home Store</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="home-store-app.html" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -1001,7 +1001,7 @@
 							<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 							<h3 class="techCat">Game App</h3>
 							<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-							<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+							<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 							<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 								<span class="btn-line btn-line-before"></span>
 								<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -1030,11 +1030,11 @@
 		  <div id="website" class="tab-pane fade"><br>
 			<div class="scrollHalf">
 				<div class="scrollHalf__grupo row h-100" data-scroll>
-					<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto first-cs">
-						<img src="images/case-study/homestore-web.png" class="img-fluid" />
+					<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto website-first-cs">
+						<img src="images/case-study/homestore-web.png" class="img-fluid" alt="Home Store Web" />
 					</div>
 					<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
-						<img src="images/case-study/amj-logo.jpg" alt="" class="icon-img">
+						<img src="images/case-study/homestore-logo.png" class="icon-img" alt="Home Store Logo">
 						<h2 class="pt-3 case-study-heading">Home Store Web</h2>
 						<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 						<a target="_blank" href="home-store-web.html" class="btn btn-naked text-uppercase pt-5">
@@ -1052,7 +1052,7 @@
 						<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 						<h3 class="techCat">Game App</h3>
 						<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-						<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+						<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 						<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 							<span class="btn-line btn-line-before"></span>
 							<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -1100,7 +1100,7 @@
 						<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 						<h3 class="techCat">Game App</h3>
 						<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-						<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+						<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 						<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 							<span class="btn-line btn-line-before"></span>
 							<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -1129,11 +1129,11 @@
 		<div id="design" class="tab-pane fade"><br>
 			<div class="scrollHalf">
 				<div class="scrollHalf__grupo row h-100" data-scroll>
-					<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto first-cs">
-						<img src="images/case-study/amj_img.png" class="img-fluid" />
+					<div class="scrollHalf__grupo__imagen col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-auto mb-auto design-first-cs">
+						<img src="images/case-study/evil-witch-design.png" class="img-fluid evil-witch-design" alt="Evil Witch Design"/>
 					</div>
 					<div class="scrollHalf__grupo__contenido col-12 col-sm-12 col-md-6 col-lg-6 col-xl-4 offset-xl-1 mt-auto mb-auto">
-						<img src="images/case-study/amj-logo.jpg" alt="" class="icon-img">
+						<img src="images/case-study/evil-witch-logo.png" alt="Evil Witch Logo" class="icon-img">
 						<h2 class="pt-3 case-study-heading">Evil Witch</h2>
 						<p class="pt-3 case-study-text">After much effort, our team found a unique character idea covering the horror feel. It was crucial to converting ideas into reality, especially when it comes to character design from scratch.</p>
 						<a target="_blank" href="evil-witch.html" class="btn btn-naked text-uppercase pt-5">
@@ -1151,7 +1151,7 @@
 						<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 						<h3 class="techCat">Game App</h3>
 						<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-						<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+						<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 						<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 							<span class="btn-line btn-line-before"></span>
 							<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
@@ -1199,7 +1199,7 @@
 						<img src="images/case-study/self_logo.png" alt="" class="icon-img">
 						<h3 class="techCat">Game App</h3>
 						<h2 class="pt-3 case-study-heading">Foodly - the hub of delicious cuisines</h2>
-						<p class="pt-3 case-study-text" style="padding: 20px;">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
+						<p class="pt-3 case-study-text">Order breakfast, lunch, or dinner, rate your favorite restaurants & track your order - one platform to curb your hunger.</p>
 						<a target="_blank" href="https://www.cubix.co/work/hictic" class="btn btn-naked text-uppercase pt-5">
 							<span class="btn-line btn-line-before"></span>
 							<span class="btn-txt view-cs-btn">&mdash;&#32;View Case Study</span>
