--- a/evil-witch.html
+++ b/evil-witch.html
@@ -377,9 +377,9 @@
 	<section class="case-study evil-witch-banner">
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<div class="col-lg-10 v-center" style="margin-top:10%">
+				<div class="col-lg-10 v-center evil-witch-banner-div">
 					<div id="axis" class="one">
-						<img src="images/case-study/rocco/character.png" alt="Evil Witch Character" class="img-fluid object van move-right evil-witch-character-img">
+						<img src="images/case-study/evil-witch/evil-witch-character.png" alt="Evil Witch Character" class="img-fluid object van move-right evil-witch-character-img">
 					</div>
 				</div>
 			</div>
@@ -396,10 +396,10 @@
 					<p class="evil-witch-about-text">After much effort, our team found a unique character idea covering the horror feel. It was crucial to converting ideas into reality, especially when it comes to character design from scratch. But our expert designers' record proves that they can make the impossible possible. Because of the team's great effort and professional approach, a great memorable character named Evil witch, which covers a half-human body and half spider, became a reality.</p>
 				</div>
 				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
-					<img src="images/case-study/rocco/first-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img1">
+					<img src="images/case-study/evil-witch/evil-witch-first-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img1">
 				</div>
 				<div class="col-6 col-sm-6 col-md-6 col-lg-3">
-					<img src="images/case-study/rocco/second-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img2">
+					<img src="images/case-study/evil-witch/evil-witch-second-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-about-img2">
 				</div>
 			</div>
 		</div>
@@ -411,7 +411,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 ">
-					<img src="images/case-study/rocco/third-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-who-img">
+					<img src="images/case-study/evil-witch/evil-witch-third-character.png" alt="Evil Witch Character" class="img-fluid evil-witch-who-img">
 				</div>
 				<div class="col-lg-6 my-auto">
 					<h3 class="evil-witch-who-heading">Who is the Evil Witch?</h3>
@@ -427,7 +427,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 v-center">
-					<img src="images/case-study/rocco/fourth-character.png" alt="Evil Witch Sketch" class="img-fluid evil-witch-sketch-img">
+					<img src="images/case-study/evil-witch/evil-witch-fourth-character.png" alt="Evil Witch Sketch" class="img-fluid evil-witch-sketch-img">
 				</div>
 				<div class="col-lg-6 my-auto">
 					<h3 class="evil-witch-sketch-heading text-white">Sketches Of Evil Witch</h3>
@@ -442,48 +442,44 @@
 	<section class="evil-witch-characters py-3 py-md-3 py-lg-4">
 		<div class="container">
 			<div class="row justify-content-md-center">
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-1.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img1">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-1.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img1">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-2.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img2">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-2.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img2">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-3.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img3">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-3.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img3">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-4.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img4">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-4.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img4">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-5.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img5">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-5.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img5">
 				</div>
-			</div>
-			<div class="row justify-content-md-center">
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-6.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img6">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-6.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img6">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-7.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img7">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-7.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img7">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-8.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img8">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-8.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img8">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-9.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img9">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-9.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img9">
 				</div>
-				<div class="col-lg-2 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-10.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img10">
+				<div class="col-6 col-sm-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-10.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img10">
 				</div>
-			</div>
-			<div class="row justify-content-md-center">
-				<div class="col-lg-3 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-11.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img11">
+				<div class="col-lg-3 col-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-11.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img11">
 				</div>
-				<div class="col-lg-3 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-12.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img12">
+				<div class="col-lg-3 col-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-12.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img12">
 				</div>
-				<div class="col-lg-3 col-6 col-md-4">
-					<img src="images/case-study/rocco/character-13.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img13">
+				<div class="col-lg-3 col-6 col-md-4 col-lg-3">
+					<img src="images/case-study/evil-witch/evil-witch-character-13.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img13">
 				</div>
 			</div>
 		</div>
@@ -500,7 +496,7 @@
 	<section class="container py-5">
 		<div class="row justify-content-md-center">
 			<div class="col-lg-7 text-center">
-				<img src="images/case-study/rocco/characters.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img14">
+				<img src="images/case-study/evil-witch/evil-witch-characters.png" alt="Evil Witch Character" class="img-fluid evil-witch-characters-img14">
 			</div>
 		</div>
 	</section>
@@ -511,14 +507,14 @@
 		<div class="container-fluid">
 			<div class="row justify-content-md-center">
 				<div class="col-lg-3">
-					<img src="images/case-study/rocco/concept-2.png" alt="Evil Witch Concept" class="img-fluid evil-witch-concept-img2">
+					<img src="images/case-study/evil-witch/evil-witch-concept-2.png" alt="Evil Witch Concept" class="img-fluid evil-witch-concept-img2">
 				</div>
 				<div class="col-lg-5 text-center my-auto">
 					<h3 class="evil-witch-concept-heading text-white">Concept of Evil Witch</h3>
 					<p class="evil-witch-concept-text text-white">The concept of evil covers all its specifications like a character can through the web because this character is a mixture of human and spider with this character should look dangerous and bad-tempered because the character's role is villain having some extraordinary power.</p>
 				</div>
 				<div class="col-lg-3">
-					<img src="images/case-study/rocco/concept-1.png" alt="Evil Witch Concept" class="img-fluid evil-witch-concept-img1">
+					<img src="images/case-study/evil-witch/evil-witch-concept-1.png" alt="Evil Witch Concept" class="img-fluid evil-witch-concept-img1">
 				</div>
 			</div>
 		</div>
@@ -529,31 +525,31 @@
 	<section class="container py-3 py-md-3 py-lg-4">
 		<div class="row justify-content-md-center">
 			<div class="col-lg-6">
-				<img src="images/case-study/rocco/about-1.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img1">
+				<img src="images/case-study/evil-witch/evil-witch-about-1.png" alt="Evil Witch Design" class="img-fluid evil-witch-design-img1">
 			</div>
 			<div class="col-lg-6 my-auto">
-				<h3 class="evil witch-design-heading">Ready Design</h3>
-				<p class="evil witch-design-text">After sketch finalization, It had been a long way, but we were done it fast. The team started work to make the character its natural form, and within a couple of days, all things that needed to be done evil were ready as per expectation, which is provided in the sketch phase and all emotions designs.</p>
+				<h3 class="evil-witch-design-heading">Ready Design</h3>
+				<p class="evil-witch-design-text">After sketch finalization, It had been a long way, but we were done it fast. The team started work to make the character its natural form, and within a couple of days, all things that needed to be done evil were ready as per expectation, which is provided in the sketch phase and all emotions designs.</p>
 			</div>
 		</div>
 		<div class="row justify-content-md-center py-5">
 			<div class="col-lg-6">
-				<img src="images/case-study/rocco/about-2.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img2">
-				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is ready to attack with high tempered.</p>
+				<img src="images/case-study/evil-witch/evil-witch-about-2.png" alt="Evil Witch Design" class="img-fluid evil-witch-design-img2">
+				<p class="evil-witch-design-text2">This design shows the emotion when an evil witch is ready to attack with high tempered.</p>
 			</div>
 			<div class="col-lg-6">
-				<img src="images/case-study/rocco/about-3.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img3">
-				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is doing the spiritual prayer of a demon.</p>
+				<img src="images/case-study/evil-witch/evil-witch-about-3.png" alt="Evil Witch Design" class="img-fluid evil-witch-design-img3">
+				<p class="evil-witch-design-text2">This design shows the emotion when an evil witch is doing the spiritual prayer of a demon.</p>
 			</div>
 		</div>
 		<div class="row justify-content-md-center py-5">
 			<div class="col-lg-6">
-				<img src="images/case-study/rocco/about-4.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img4">
-				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is on focus and trying to get the idea of the situation.</p>
+				<img src="images/case-study/evil-witch/evil-witch-about-4.png" alt="Evil Witch Design" class="img-fluid evil-witch-design-img4">
+				<p class="evil-witch-design-text2">This design shows the emotion when an evil witch is on focus and trying to get the idea of the situation.</p>
 			</div>
 			<div class="col-lg-6">
-				<img src="images/case-study/rocco/about-5.png" alt="Evil Witch Design" class="img-fluid evil witch-design-img5">
-				<p class="evil witch-design-text2">This design shows the emotion when an evil witch is ready to throw the dangerous web.</p>
+				<img src="images/case-study/evil-witch/evil-witch-about-5.png" alt="Evil Witch Design" class="img-fluid evil-witch-design-img5">
+				<p class="evil-witch-design-text2">This design shows the emotion when an evil witch is ready to throw the dangerous web.</p>
 			</div>
 		</div>
 	</section>
