--- a/portfolio.html
+++ b/portfolio.html
@@ -436,10 +436,10 @@
 		<div class="row card-list">
 			<div class="col-lg-12 col-md-12 grid-sizer"></div>
 			<div class="col-sm-12 single-card-item ar">
-				<div class="pbwide shadow bg-gradient1">
+				<div class="pbwide shadow portfolio-gradient1">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
+							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>AR</span></div>
 						<h3 class="mt30 mb30 text-white">Placea Furniture Store</h3>
@@ -458,7 +458,7 @@
 						<div class="img-wide-blocktt tilt-outer">
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
-									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid" width="80%">
+									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid portfolio-img">
 								</div>
 							</div>
 						</div>
@@ -466,10 +466,10 @@
 				</div>
 			</div>
 			<div class="col-sm-12 single-card-item design">
-				<div class="pbwide shadow bg-gradient1">
+				<div class="pbwide shadow portfolio-gradient2">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
+							<img src="images/case-study/evil-witch-logo.png" alt="logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Design</span></div>
 						<h3 class="mt30 mb30 text-white">Evil Witch</h3>
@@ -488,7 +488,7 @@
 						<div class="img-wide-blocktt tilt-outer">
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
-									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid" width="80%">
+									<img src="images/case-study/evil-witch-design.png" alt="img" class="img-fluid portfolio-img">
 								</div>
 							</div>
 						</div>
@@ -496,10 +496,10 @@
 				</div>
 			</div>
 			<div class="col-sm-12 single-card-item game">
-				<div class="pbwide shadow bg-gradient1">
+				<div class="pbwide shadow portfolio-gradient3">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
+							<img src="images/case-study/toys-short-logo.png" alt="logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Game</span></div>
 						<h3 class="mt30 mb30 text-white">Toys Sort</h3>
@@ -518,7 +518,7 @@
 						<div class="img-wide-blocktt tilt-outer">
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
-									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid" width="80%">
+									<img src="images/case-study/toys-short-app.png" alt="img" class="img-fluid portfolio-img">
 								</div>
 							</div>
 						</div>
@@ -526,10 +526,10 @@
 				</div>
 			</div>
 			<div class="col-sm-12 single-card-item mobile">
-				<div class="pbwide shadow bg-gradient1">
+				<div class="pbwide shadow portfolio-gradient4">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
+							<img src="images/case-study/vero-logo.png" alt="logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Mobile App</span></div>
 						<h3 class="mt30 mb30 text-white">Vero</h3>
@@ -548,7 +548,7 @@
 						<div class="img-wide-blocktt tilt-outer">
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
-									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid" width="80%">
+									<img src="images/case-study/vero-app.png" alt="img" class="img-fluid portfolio-img">
 								</div>
 							</div>
 						</div>
@@ -556,10 +556,10 @@
 				</div>
 			</div>
 			<div class="col-sm-12 single-card-item mobile">
-				<div class="pbwide shadow bg-gradient1">
+				<div class="pbwide shadow portfolio-gradient5">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
+							<img src="images/case-study/homestore-logo.png" alt="logo" class="img-fluid logo-img">
 						</div>
 						<div class="widebloktag"><span>Mobile App</span></div>
 						<h3 class="mt30 mb30 text-white">Home Store</h3>
@@ -578,7 +578,7 @@
 						<div class="img-wide-blocktt tilt-outer">
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
-									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid" width="80%">
+									<img src="images/case-study/homestore-app.png" alt="img" class="img-fluid portfolio-img">
 								</div>
 							</div>
 						</div>
@@ -586,10 +586,10 @@
 				</div>
 			</div>
 			<div class="col-sm-12 single-card-item website">
-				<div class="pbwide shadow bg-gradient1">
+				<div class="pbwide shadow portfolio-gradient6">
 					<div class="portfolio-item-info-tt d-block ms-auto">
 						<div class="logowide mb20">
-							<img src="images/case-study/placea-logo.png" alt="logo" class="img-fluid">
+							<img src="images/case-study/homestore-logo.png" alt="logo" class="img-fluid">
 						</div>
 						<div class="widebloktag"><span>Website</span></div>
 						<h3 class="mt30 mb30 text-white">Home Store</h3>
@@ -608,7 +608,7 @@
 						<div class="img-wide-blocktt tilt-outer">
 							<div class="innerwidedevice tilt-inner" data-tilt="" data-tilt-max="4" data-tilt-speed="1000" data-tilt-perspective="2000">
 								<div class="">
-									<img src="images/case-study/placea-app.png" alt="img" class="img-fluid" width="80%">
+									<img src="images/case-study/homestore-web.png" alt="img" class="img-fluid portfolio-img">
 								</div>
 							</div>
 						</div>
